[project]
name = "projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.0.1",
    "jupyter>=1.1.1",
    "kaleido>=1.1.0",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "pywavelets>=1.8.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
]
